	* Follow-up to #55081: Fatal error in Static Info Tables Manager module in TYPO3 6.2
	* Clean-up in class SJBR\StaticInfoTables\Hook\Backend\Form\SuggestReceiver
	* Clean-up in class SJBR\StaticInfoTables\Hook\Backend\Form\ElementRenderingHelper
	* Add TYPO3 version range dependency to generated language pack extension
	* Follow-up to #50804: Entities not sorted according to locale collation

2013-12-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #54160: List module broken on root page

2013-11-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #54008: CachedClassLoader not loaded in ext_localconf in TYPO3 6.2
	* Enable in TYPO3 6.2
	* Update version to 6.0.7

2013-11-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #52103: PHP Warning in ElementRenderingHelper
	* Update version to 6.0.6
	* Resolves #53987: Incorrectly named Brazilian locallang file

2013-11-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #52415: Caching issue while using static country repository

2013-11-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #53840: Could not determine the child object type.
	* Resolves #51532: cn_currency_iso_3 in some african countries are wrong in table static_countries
	* Resolves #52572: countryRepository->findByTerritory does not respect territory hierarchy

2013-11-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #51754: PHP Warning in ClassCacheManager

2013-08-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #50804: Entities not sorted according to locale collation
	* Resolves #50742: Translation handling fails in multi select fields (TCA)

2013-08-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #50804: Entities not sorted according to locale collation

2013-07-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.0.5

2013-07-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #50050: Use TYPO3 caching framework for extended domain model classes
	* Resolves #50164: Autoload cached extended domain model classes
